--- a/app.json
+++ b/app.json
@@ -8,5 +8,6 @@
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "小鱼儿短视频",
     "navigationBarTextStyle": "black"
-  }
+  },
+  "debug":true
 }
