--- a/app.json
+++ b/app.json
@@ -1,7 +1,14 @@
 {
   "pages": [
+    "pages/index/index",
+    "pages/videoinfo/videoinfo",
+    "pages/videotest/videotest",
+    "pages/userLogin/login",
+    "pages/report/report",
+    "pages/mine/mine",
     "pages/userRegist/regist",
-    "pages/index/index"
+    "pages/chooseBgm/chooseBgm",
+    "pages/searchVideo/searchVideo"
   ],
   "window": {
     "backgroundTextStyle": "light",
